@@ -14,6 +14,7 @@
 * Added testing utilities.
 * Added new test runner that using the new testing module.
 * Removed old test runners.
+* Added unit tests for RRD isntantiation.
 
 2009.07.02
 
